# uboonedaq-bernfebdaq

./: .gitignore  setup_bernfebdaq-core.sh  setup_bernfebdaq.sh  setup_bernfebdrv.sh  setup_common
bernfebdaq/: .gitignore  CMakeLists.txt  README.TXT
bernfebdaq-core/: CMakeLists.txt
bernfebdaq-core/bernfebdaq-core/: CMakeLists.txt
bernfebdaq-core/bernfebdaq-core/BuildInfo/: CMakeLists.txt  CMakeLists.txt~  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
bernfebdaq-core/bernfebdaq-core/Overlays/: BernFEBFragment.cc  BernFEBFragment.hh  BernZMQFragment.cc  BernZMQFragment.hh  FragmentType.cc  FragmentType.hh
bernfebdaq-core/ups/: product_deps
bernfebdaq/bernfebdaq/: CMakeLists.txt
bernfebdaq/bernfebdaq/ArtModules/: BernFEBDump_module.cc  BernZMQDump_module.cc  CAEN2795Dump_module.cc  CMakeLists.txt  TimeCoincidence_module.cc
bernfebdaq/bernfebdaq/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
bernfebdaq/bernfebdaq/Generators/: A2795.h  BernFEBData.hh  BernFEBDataZMQ.hh  BernFEBDataZMQ_generator.cc  BernFEBData_generator.cc  BernFEBFakeData.hh  BernFEBFakeData_generator.cc  BernFEB_GeneratorBase.cc  BernFEB_GeneratorBase.hh  BernZMQData.hh  BernZMQData_generator.cc  BernZMQ_GeneratorBase.cc  BernZMQ_GeneratorBase.hh  CAEN2795.hh  CAEN2795FakeData.hh  CAEN2795FakeData.hh_old  CAEN2795FakeData_generator.cc  CAEN2795_GeneratorBase.cc  CAEN2795_GeneratorBase.hh  CAEN2795_generator.cc_old  CMakeLists.txt  keyb.h  workerThread.cpp  workerThread.h
bernfebdaq/bernfebdaq/Products/: CMakeLists.txt  classes.h.sample  classes_def.xml.sample
bernfebdaq/examples/: README.examples
bernfebdaq/examples/asciiSimulator/: README  generateAscii.rb  manage1x2x2System.sh  quick-start.sh
bernfebdaq/examples/cfgManagement/: README  quick-start.sh
bernfebdaq/examples/metrics/: DemoControl.rb  README  generateAggregator.rb  generateBoardReaderMain.rb  generateEventBuilder.rb  generateToy.rb  manage2x2x2System.sh  quick-start.sh  start2x2x2System.sh
bernfebdaq/examples/metrics/fcl/: MessageFacility.fcl
bernfebdaq/examples/mfextensions/: README  manage2x2x2System.sh  quick-start.sh  start2x2x2System.sh
bernfebdaq/examples/udpReceiver/: README  UDPReceiver.fcl  generateUDP.rb  manage1x2x2System.sh  multi_udp_send_artdaq.py  quick-start.sh  start1x2x2System.sh
bernfebdaq/inputData/: table_daqV1720_huff_diff.txt
bernfebdaq/test/Generators/: CMakeLists.txt
bernfebdaq/test/Generators/fcl/: ToySimulator_t.fcl  V172xFileReader_t.fcl  V172xSimulator_t.fcl
bernfebdaq/tools/: CMakeLists.txt  CreateNewFragmentGenerator.rb  DemoControl.rb  RunDriver.rb  SDAQ_Boot.sh  SDAQ_ConfigProcesses.sh  SDAQ_Initialize.sh  SDAQ_Shutdown.sh  SDAQ_StartRun.sh  SDAQ_Status.sh  SDAQ_StopRun.sh  SDAQ_Terminate.sh  daq_init_common.sh  daq_start_common.sh  daq_status_common.sh  daq_stop_common.sh  demo_driver.cc  demo_utilities.rb  downloadDeps.sh  generateAggregator.rb  generateAggregatorMain.rb  generateAscii.rb  generateBoardReaderMain.rb  generateCompression.rb  generateEventBuilder.rb  generateEventBuilderMain.rb  generateNormal.rb  generatePattern.rb  generateUDP.rb  generateV1720.rb  generateWFViewer.rb  installArtDaqDemo.sh  makeConfigs.rb  manage2x2System.sh  manage2x2x2System.sh  manage5x2x2System.sh  manageSystem.sh  pmtConfig  pmtConfig_3BR  quick-start.sh  (+9 more)
bernfebdaq/tools/fcl/: Aggregator_ubooNECRT.fcl  AsciiSimulator.fcl  BernFEB_Data_driver.fcl  BernFEB_FakeData_driver.fcl  BernZMQ_Data_driver.fcl  BoardReader_BernDataZMQ.fcl  BoardReader_BernDataZMQ_02.fcl  BoardReader_BernDataZMQ_03.fcl  BoardReader_BernDataZMQ_04.fcl  CAEN2795_FakeData_driver.fcl  CAEN2795_driver.fcl  EventBuilder_uBooNECRT.fcl  NormalSimulator.fcl  PatternSimulator.fcl  ProcessZMQEvents.fcl  RunTimeCoincidence.fcl  UDPReceiver.fcl  driver.fcl  readRoot.fcl  splitter.fcl
bernfebdaq/tools/snippets/: CMakeLists.txt  aggregator.erb.fcl  boardreader.erb.fcl  eventbuilder_t1.erb.fcl  eventbuilder_t2.erb.fcl
bernfebdaq/tools/snippets/templates/: aggregators.fcl  analyzers.fcl  boardreaders.fcl  defaults.fcl  eventbuilders.fcl  filters.fcl  outputs.fcl  physics.fcl  producers.fcl  services.fcl  sources.fcl
bernfebdaq/ups/: product_deps
bernfebdrv/: CMakeLists.txt
bernfebdrv/CONF/: CITIROC_PROBEbitstream.txt  CITIROC_SC_DEFAULT.txt  CITIROC_SC_DEFAULT_LOWBIAS.txt  CITIROC_SC_DRVTEST.txt  CITIROC_SC_PROFILE1.txt  CITIROC_SC_SN011.txt  CITIROC_SCbitstream_BASIC.txt  CITIROC_SCbitstream_TESTS.txt
bernfebdrv/bernfebdrv/: CMakeLists.txt  FEB0MQ_LinkDef.h  FEBCONF.cc  FEBCONF.h  FEBDRV.cc  FEBDRV.h  feb_trace_defines.h  febconf.c  febconf.cc  febconf.h  febctl.cc  febdrv.backup.c  febdrv.cc  febdrv.h  febevt.h  febinfluxdb.c  febinfluxdb.cc  febmon.cc  febstore.c  febstore.cc  test_febdrv.cc
bernfebdrv/setup/: setupBERNFEBDRV  setup_bernfebdrv.sh
bernfebdrv/ups/: product_deps
